// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Pagination Defaults smoke-test 1`] = `
<div data-test-block="true">
  <nav class="Pagination_pagination__lBs+M"
       aria-label="sidevelger"
  >
    <div class
         aria-live="polite"
         aria-atomic="true"
    >
      Viser 1–10 av 15
    </div>
    <ul class="Pagination_paginationList__+WZ2R ">
      <li class="Pagination_paginationElement__io2RM">
        <button class="Button_button__pkuNv Button_button_primary__8Ouwo  Pagination_paginationButton__Z6pjl"
                type="button"
                aria-current="true"
        >
          <span class="Button_buttonText__JxyB+">
            1
          </span>
        </button>
      </li>
      <li class="Pagination_paginationElement__io2RM">
        <button class="Button_button__pkuNv Button_button_tertiary__HcHyd  Pagination_paginationButton__Z6pjl"
                type="button"
        >
          <span class="Button_buttonText__JxyB+">
            2
          </span>
        </button>
      </li>
      <li class="Pagination_paginationElement__io2RM">
        <button class="InlineButton_button__2aGtg  InlineButton_button_withIconRight__FUld4 Pagination_paginationButton__Z6pjl"
                type="button"
        >
          <span class>
            Neste
          </span>
          <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz InlineButton_icon__YMesU"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="m7.1 5.8 6.1 6.1L7.1 18 9 19.9l8-8-8-8-1.9 1.9Z">
            </path>
          </svg>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Tester/Pagination HidePageSummary smoke-test 1`] = `
<div data-test-block="true">
  <nav class="Pagination_pagination__lBs+M"
       aria-label="sidevelger"
  >
    <div class="Pagination_paginationSummary_hide__Jf-cV"
         aria-live="polite"
         aria-atomic="true"
    >
      Viser 1–10 av 70
    </div>
    <ul class="Pagination_paginationList__+WZ2R Pagination_paginationList_summaryhidden__DTSsA">
      <li class="Pagination_paginationElement__io2RM">
        <button class="Button_button__pkuNv Button_button_primary__8Ouwo  Pagination_paginationButton__Z6pjl"
                type="button"
                aria-current="true"
        >
          <span class="Button_buttonText__JxyB+">
            1
          </span>
        </button>
      </li>
      <li class="Pagination_paginationElement__io2RM">
        <button class="Button_button__pkuNv Button_button_tertiary__HcHyd  Pagination_paginationButton__Z6pjl"
                type="button"
        >
          <span class="Button_buttonText__JxyB+">
            2
          </span>
        </button>
      </li>
      <li class="Pagination_paginationElement__io2RM">
        <p class="Paragraph_paragraph__NPzKO Paragraph_paragraph_standard__ObBkf  Pagination_paginationElipsis__T7Grr">
          ...
        </p>
      </li>
      <li class="Pagination_paginationElement__io2RM">
        <button class="Button_button__pkuNv Button_button_tertiary__HcHyd  Pagination_paginationButton__Z6pjl"
                type="button"
        >
          <span class="Button_buttonText__JxyB+">
            7
          </span>
        </button>
      </li>
      <li class="Pagination_paginationElement__io2RM">
        <button class="InlineButton_button__2aGtg  InlineButton_button_withIconRight__FUld4 Pagination_paginationButton__Z6pjl"
                type="button"
        >
          <span class>
            Neste
          </span>
          <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz InlineButton_icon__YMesU"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="m7.1 5.8 6.1 6.1L7.1 18 9 19.9l8-8-8-8-1.9 1.9Z">
            </path>
          </svg>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Tester/Pagination HidePrevNextButtonTitle smoke-test 1`] = `
<div data-test-block="true">
  <nav class="Pagination_pagination__lBs+M"
       aria-label="sidevelger"
  >
    <div class
         aria-live="polite"
         aria-atomic="true"
    >
      Viser 1–10 av 70
    </div>
    <ul class="Pagination_paginationList__+WZ2R ">
      <li class="Pagination_paginationElement__io2RM">
        <button class="Button_button__pkuNv Button_button_primary__8Ouwo  Pagination_paginationButton__Z6pjl"
                type="button"
                aria-current="true"
        >
          <span class="Button_buttonText__JxyB+">
            1
          </span>
        </button>
      </li>
      <li class="Pagination_paginationElement__io2RM">
        <button class="Button_button__pkuNv Button_button_tertiary__HcHyd  Pagination_paginationButton__Z6pjl"
                type="button"
        >
          <span class="Button_buttonText__JxyB+">
            2
          </span>
        </button>
      </li>
      <li class="Pagination_paginationElement__io2RM">
        <p class="Paragraph_paragraph__NPzKO Paragraph_paragraph_standard__ObBkf  Pagination_paginationElipsis__T7Grr">
          ...
        </p>
      </li>
      <li class="Pagination_paginationElement__io2RM">
        <button class="Button_button__pkuNv Button_button_tertiary__HcHyd  Pagination_paginationButton__Z6pjl"
                type="button"
        >
          <span class="Button_buttonText__JxyB+">
            7
          </span>
        </button>
      </li>
      <li class="Pagination_paginationElement__io2RM">
        <button class="IconButton_button__mw9sG IconButton_button_medium__8KBUt  "
                type="button"
        >
          <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
               viewbox="0 0 24 24"
               focusable="false"
               aria-labelledby="svgtitle-:r4:"
               aria-hidden="false"
               role="img"
          >
            <title id="svgtitle-:r4:">
              Neste
            </title>
            <path d="m7.1 5.8 6.1 6.1L7.1 18 9 19.9l8-8-8-8-1.9 1.9Z">
            </path>
          </svg>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Tester/Pagination Sibling smoke-test 1`] = `
<div data-test-block="true">
  <nav class="Pagination_pagination__lBs+M"
       aria-label="sidevelger"
  >
    <div class
         aria-live="polite"
         aria-atomic="true"
    >
      Viser 1–10 av 70
    </div>
    <ul class="Pagination_paginationList__+WZ2R ">
      <li class="Pagination_paginationElement__io2RM">
        <button class="Button_button__pkuNv Button_button_primary__8Ouwo  Pagination_paginationButton__Z6pjl"
                type="button"
                aria-current="true"
        >
          <span class="Button_buttonText__JxyB+">
            1
          </span>
        </button>
      </li>
      <li class="Pagination_paginationElement__io2RM">
        <button class="Button_button__pkuNv Button_button_tertiary__HcHyd  Pagination_paginationButton__Z6pjl"
                type="button"
        >
          <span class="Button_buttonText__JxyB+">
            2
          </span>
        </button>
      </li>
      <li class="Pagination_paginationElement__io2RM">
        <button class="Button_button__pkuNv Button_button_tertiary__HcHyd  Pagination_paginationButton__Z6pjl"
                type="button"
        >
          <span class="Button_buttonText__JxyB+">
            3
          </span>
        </button>
      </li>
      <li class="Pagination_paginationElement__io2RM">
        <p class="Paragraph_paragraph__NPzKO Paragraph_paragraph_standard__ObBkf  Pagination_paginationElipsis__T7Grr">
          ...
        </p>
      </li>
      <li class="Pagination_paginationElement__io2RM">
        <button class="Button_button__pkuNv Button_button_tertiary__HcHyd  Pagination_paginationButton__Z6pjl"
                type="button"
        >
          <span class="Button_buttonText__JxyB+">
            7
          </span>
        </button>
      </li>
      <li class="Pagination_paginationElement__io2RM">
        <button class="InlineButton_button__2aGtg  InlineButton_button_withIconRight__FUld4 Pagination_paginationButton__Z6pjl"
                type="button"
        >
          <span class>
            Neste
          </span>
          <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz InlineButton_icon__YMesU"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="m7.1 5.8 6.1 6.1L7.1 18 9 19.9l8-8-8-8-1.9 1.9Z">
            </path>
          </svg>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Tester/Pagination WithAttributes play-test 1`] = `
<div data-test-block="true">
  <nav id="htmlId"
       class="Pagination_pagination__lBs+M dummyClassname"
       lang="nb"
       data-testid="123ID"
       aria-label="sidevelger"
  >
    <div class
         aria-live="polite"
         aria-atomic="true"
    >
      Viser 1–10 av 70
    </div>
    <ul id="htmlId"
        lang="nb"
        class="Pagination_paginationList__+WZ2R "
    >
      <li class="Pagination_paginationElement__io2RM">
        <button class="Button_button__pkuNv Button_button_primary__8Ouwo  Pagination_paginationButton__Z6pjl"
                type="button"
                aria-current="true"
        >
          <span class="Button_buttonText__JxyB+">
            1
          </span>
        </button>
      </li>
      <li class="Pagination_paginationElement__io2RM">
        <button class="Button_button__pkuNv Button_button_tertiary__HcHyd  Pagination_paginationButton__Z6pjl"
                type="button"
        >
          <span class="Button_buttonText__JxyB+">
            2
          </span>
        </button>
      </li>
      <li class="Pagination_paginationElement__io2RM">
        <p class="Paragraph_paragraph__NPzKO Paragraph_paragraph_standard__ObBkf  Pagination_paginationElipsis__T7Grr">
          ...
        </p>
      </li>
      <li class="Pagination_paginationElement__io2RM">
        <button class="Button_button__pkuNv Button_button_tertiary__HcHyd  Pagination_paginationButton__Z6pjl"
                type="button"
        >
          <span class="Button_buttonText__JxyB+">
            7
          </span>
        </button>
      </li>
      <li class="Pagination_paginationElement__io2RM">
        <button class="InlineButton_button__2aGtg  InlineButton_button_withIconRight__FUld4 Pagination_paginationButton__Z6pjl"
                type="button"
        >
          <span class>
            Neste
          </span>
          <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz InlineButton_icon__YMesU"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="m7.1 5.8 6.1 6.1L7.1 18 9 19.9l8-8-8-8-1.9 1.9Z">
            </path>
          </svg>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Tester/Pagination WithButtons smoke-test 1`] = `
<div data-test-block="true">
  <nav class="Pagination_pagination__lBs+M"
       aria-label="sidevelger"
  >
    <div class
         aria-live="polite"
         aria-atomic="true"
    >
      Viser 1–10 av 70
    </div>
    <ul class="Pagination_paginationList__+WZ2R ">
      <li class="Pagination_paginationElement__io2RM">
        <button class="Button_button__pkuNv Button_button_primary__8Ouwo  Pagination_paginationButton__Z6pjl"
                type="button"
                aria-current="true"
        >
          <span class="Button_buttonText__JxyB+">
            1
          </span>
        </button>
      </li>
      <li class="Pagination_paginationElement__io2RM">
        <button class="Button_button__pkuNv Button_button_tertiary__HcHyd  Pagination_paginationButton__Z6pjl"
                type="button"
        >
          <span class="Button_buttonText__JxyB+">
            2
          </span>
        </button>
      </li>
      <li class="Pagination_paginationElement__io2RM">
        <p class="Paragraph_paragraph__NPzKO Paragraph_paragraph_standard__ObBkf  Pagination_paginationElipsis__T7Grr">
          ...
        </p>
      </li>
      <li class="Pagination_paginationElement__io2RM">
        <button class="Button_button__pkuNv Button_button_tertiary__HcHyd  Pagination_paginationButton__Z6pjl"
                type="button"
        >
          <span class="Button_buttonText__JxyB+">
            7
          </span>
        </button>
      </li>
      <li class="Pagination_paginationElement__io2RM">
        <button class="InlineButton_button__2aGtg  InlineButton_button_withIconRight__FUld4 Pagination_paginationButton__Z6pjl"
                type="button"
        >
          <span class>
            Neste
          </span>
          <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz InlineButton_icon__YMesU"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="m7.1 5.8 6.1 6.1L7.1 18 9 19.9l8-8-8-8-1.9 1.9Z">
            </path>
          </svg>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Tester/Pagination WithMultiple smoke-test 1`] = `
<div data-test-block="true">
  <nav class="Pagination_pagination__lBs+M"
       aria-label="sidevelger"
  >
    <div class
         aria-live="polite"
         aria-atomic="true"
    >
      Viser 1–10 av 70
    </div>
    <ul class="Pagination_paginationList__+WZ2R ">
      <li class="Pagination_paginationElement__io2RM">
        <button class="Button_button__pkuNv Button_button_primary__8Ouwo  Pagination_paginationButton__Z6pjl"
                type="button"
                aria-current="true"
        >
          <span class="Button_buttonText__JxyB+">
            1
          </span>
        </button>
      </li>
      <li class="Pagination_paginationElement__io2RM">
        <button class="Button_button__pkuNv Button_button_tertiary__HcHyd  Pagination_paginationButton__Z6pjl"
                type="button"
        >
          <span class="Button_buttonText__JxyB+">
            2
          </span>
        </button>
      </li>
      <li class="Pagination_paginationElement__io2RM">
        <p class="Paragraph_paragraph__NPzKO Paragraph_paragraph_standard__ObBkf  Pagination_paginationElipsis__T7Grr">
          ...
        </p>
      </li>
      <li class="Pagination_paginationElement__io2RM">
        <button class="Button_button__pkuNv Button_button_tertiary__HcHyd  Pagination_paginationButton__Z6pjl"
                type="button"
        >
          <span class="Button_buttonText__JxyB+">
            7
          </span>
        </button>
      </li>
      <li class="Pagination_paginationElement__io2RM">
        <button class="InlineButton_button__2aGtg  InlineButton_button_withIconRight__FUld4 Pagination_paginationButton__Z6pjl"
                type="button"
        >
          <span class>
            Neste
          </span>
          <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz InlineButton_icon__YMesU"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="m7.1 5.8 6.1 6.1L7.1 18 9 19.9l8-8-8-8-1.9 1.9Z">
            </path>
          </svg>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Tester/Pagination WithPrevNextLabel play-test 1`] = `
<div data-test-block="true">
  <nav class="Pagination_pagination__lBs+M"
       aria-label="sidevelger"
  >
    <div class
         aria-live="polite"
         aria-atomic="true"
    >
      Viser 11–20 av 70
    </div>
    <ul class="Pagination_paginationList__+WZ2R ">
      <li class="Pagination_paginationElement__io2RM Pagination_paginationElement_leftArrow__IYuDk">
        <button class="IconButton_button__mw9sG IconButton_button_medium__8KBUt  "
                type="button"
        >
          <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
               viewbox="0 0 24 24"
               focusable="false"
               aria-labelledby="svgtitle-:r8:"
               aria-hidden="false"
               role="img"
          >
            <title id="svgtitle-:r8:">
              Forrige
            </title>
            <path d="m16.9 17.98-6.1-6.1 6.1-6.1-1.8-1.9-8 8 8 8 1.8-1.9Z">
            </path>
          </svg>
        </button>
      </li>
      <li class="Pagination_paginationElement__io2RM">
        <button class="Button_button__pkuNv Button_button_tertiary__HcHyd  Pagination_paginationButton__Z6pjl"
                type="button"
        >
          <span class="Button_buttonText__JxyB+">
            1
          </span>
        </button>
      </li>
      <li class="Pagination_paginationElement__io2RM">
        <button class="Button_button__pkuNv Button_button_primary__8Ouwo  Pagination_paginationButton__Z6pjl"
                type="button"
                aria-current="true"
        >
          <span class="Button_buttonText__JxyB+">
            2
          </span>
        </button>
      </li>
      <li class="Pagination_paginationElement__io2RM">
        <button class="Button_button__pkuNv Button_button_tertiary__HcHyd  Pagination_paginationButton__Z6pjl"
                type="button"
        >
          <span class="Button_buttonText__JxyB+">
            3
          </span>
        </button>
      </li>
      <li class="Pagination_paginationElement__io2RM">
        <p class="Paragraph_paragraph__NPzKO Paragraph_paragraph_standard__ObBkf  Pagination_paginationElipsis__T7Grr">
          ...
        </p>
      </li>
      <li class="Pagination_paginationElement__io2RM">
        <button class="Button_button__pkuNv Button_button_tertiary__HcHyd  Pagination_paginationButton__Z6pjl"
                type="button"
        >
          <span class="Button_buttonText__JxyB+">
            7
          </span>
        </button>
      </li>
      <li class="Pagination_paginationElement__io2RM">
        <button class="IconButton_button__mw9sG IconButton_button_medium__8KBUt  "
                type="button"
        >
          <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
               viewbox="0 0 24 24"
               focusable="false"
               aria-labelledby="svgtitle-:r7:"
               aria-hidden="false"
               role="img"
          >
            <title id="svgtitle-:r7:">
              Neste
            </title>
            <path d="m7.1 5.8 6.1 6.1L7.1 18 9 19.9l8-8-8-8-1.9 1.9Z">
            </path>
          </svg>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Tester/Pagination WithRef smoke-test 1`] = `
<div data-test-block="true">
  <nav class="Pagination_pagination__lBs+M"
       aria-label="sidevelger"
       id="dummyIdForwardedFromRef"
  >
    <div class
         aria-live="polite"
         aria-atomic="true"
    >
      Viser 1–10 av 70
    </div>
    <ul class="Pagination_paginationList__+WZ2R "
        id="dummyIdForwardedFromRef"
    >
      <li class="Pagination_paginationElement__io2RM">
        <button class="Button_button__pkuNv Button_button_primary__8Ouwo  Pagination_paginationButton__Z6pjl"
                type="button"
                aria-current="true"
        >
          <span class="Button_buttonText__JxyB+">
            1
          </span>
        </button>
      </li>
      <li class="Pagination_paginationElement__io2RM">
        <button class="Button_button__pkuNv Button_button_tertiary__HcHyd  Pagination_paginationButton__Z6pjl"
                type="button"
        >
          <span class="Button_buttonText__JxyB+">
            2
          </span>
        </button>
      </li>
      <li class="Pagination_paginationElement__io2RM">
        <p class="Paragraph_paragraph__NPzKO Paragraph_paragraph_standard__ObBkf  Pagination_paginationElipsis__T7Grr">
          ...
        </p>
      </li>
      <li class="Pagination_paginationElement__io2RM">
        <button class="Button_button__pkuNv Button_button_tertiary__HcHyd  Pagination_paginationButton__Z6pjl"
                type="button"
        >
          <span class="Button_buttonText__JxyB+">
            7
          </span>
        </button>
      </li>
      <li class="Pagination_paginationElement__io2RM">
        <button class="InlineButton_button__2aGtg  InlineButton_button_withIconRight__FUld4 Pagination_paginationButton__Z6pjl"
                type="button"
        >
          <span class>
            Neste
          </span>
          <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz InlineButton_icon__YMesU"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="m7.1 5.8 6.1 6.1L7.1 18 9 19.9l8-8-8-8-1.9 1.9Z">
            </path>
          </svg>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;
